<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/content_margin_normal"
              android:layout_marginRight="@dimen/content_margin_normal"
              android:layout_marginTop="@dimen/content_margin_small"
              android:orientation="vertical">

    <View
        style="@style/MyTextLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/silver"/>

        <TextView
            style="@style/MyTextTableTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text=""/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/silver"/>

        <TextView
            style="@style/MyTextTableTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/client_name"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/silver"/>

        <TextView
            style="@style/MyTextTableTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/quantity_of_goods"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/silver"/>

        <TextView
            style="@style/MyTextTableTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/amount"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/silver"/>

        <TextView
            style="@style/MyTextTableTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/single_number"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/silver"/>

        <TextView
            style="@style/MyTextTableTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/goods_number"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/silver"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/silver"/>
</LinearLayout>