<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/silver"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <View
                style="@style/MyTextLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />

            <TextView
                style="@style/MyTextTableTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text=""/>

            <View
                style="@style/MyTextLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />

            <TextView
                style="@style/MyTextTableTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center"
                android:text="@string/client_name"/>

            <View
                style="@style/MyTextLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />

            <TextView
                style="@style/MyTextTableTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/quantity_of_goods"/>

            <View
                style="@style/MyTextLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />

            <TextView
                style="@style/MyTextTableTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/amount"/>

            <View
                style="@style/MyTextLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/silver"/>
</LinearLayout>